# INFO_7390_Art_and_Science_of_Data

./: .gitignore  INFO7390_Understanding_data_Time_series_analysis (1) (1).ipynb  Individual_Ming-Tse Chen_Exploratory Data Analysis (EDA) and Visualization_Markdown file.md  LICENSE  README.md  Understanding Data with Time Series Analysis.docx  notebook_organizer.py  readme_organizer.py  rename.py  understanding_Data_worked_examples_TSA (1) (1).ipynb  undo_md_organization.py  undoprojects.py  used_cars_data.csv
Assignments/: Teach_a_Botspeak_Concept_Assignment.md
Botspeak/: README.md
CSV/: AAPL.csv  Aquifer_Petrignano.csv  Life expectancy.csv  README.md  Shopping_Data.csv  Suicide Rate.csv  TEH_World_Happiness_2015_2019.csv  TEH_World_Happiness_2015_2019_Imputed.csv  Weather.csv  cloud_and_wind-1.csv  date_time-1.csv  threads_reviews.csv  titanic3.xls
CSV_Data/: global air pollution dataset.csv
Causal_AI/: README.md
Data_Scraping/: README.md
Data_Visualization/: README.md
EventFinderAI_SahitiNallamolu/: README.md
Exams/: INFO_7390_Midterm_Practice_Exam.md  INFO_7390_Midterm_Practice_Exam_Fall_2025.md  INFO_7390_Midterm_Study_Guide.md  INFO_7390_Midterm_Topics.md  cheat-sheet.md  practice-exam-2.md  practice-exam-3.md  practice-exam.md
GIGO_A_Crash_Course_in_Data/: README.md
Generative_AI_for_Data/Fall_2024/GROUP 16- CFA-Reserach-Publication-RAG-System/data-ingestion/: data_ingestion.py  pyproject.toml  snowflake_ingestion.py
Generative_AI_for_Data/Fall_2024/GROUP 16- CFA-Reserach-Publication-RAG-System/fastapi/: Dockerfile  main_fastapi.py  pdf_processor.py  pyproject.toml  text_processor.py  utils.py
Generative_AI_for_Data/Fall_2024/GROUP 16- CFA-Reserach-Publication-RAG-System/streamlit/: Dockerfile  index.py  page1.py  page2.py  page3.py  page4.py  pyproject.toml
Generative_AI_for_Data/Fall_2024/GROUP_18-Formula_1_Regulations_RAG_System/Paddock-Pal/: Dockerfile  Final_Project_Formula1.pem  LICENSE  Paddock Pal Documentation.docx  README.md  docker-compose.yaml  paddockpal.py  pyproject.toml  requirements.txt
Generative_AI_for_Data/Fall_2024/GROUP_18-Formula_1_Regulations_RAG_System/Paddock-Pal/Airflow/: airflow.cfg  airflow.db
Generative_AI_for_Data/Fall_2024/GROUP_18-Formula_1_Regulations_RAG_System/Paddock-Pal/Airflow/dags/src/: f1_regulation_pipeline_dag.py  scrape_f1_drivers.py  scrape_f1_history.py  scrape_f1_tracks.py  scrape_sentence_tranformer.py  scrape_to_s3.py  store_embeddings.py
Generative_AI_for_Data/Fall_2024/GROUP_18-Formula_1_Regulations_RAG_System/Paddock-Pal/FastAPI/: jwtauth.py  main.py  newsapi.py
Generative_AI_for_Data/Fall_2024/GROUP_18-Formula_1_Regulations_RAG_System/Paddock-Pal/Streamlit/: informationpage.py  landing.py  main.py  paddockpal1.py  tracks_drivers.py
Generative_AI_for_Data/Fall_2024/Group_17_Cleverly_arXiv_rag_application/fastapi/: Dockerfile  config.py  lessons.py  main.py  pyproject.toml  syllabus.py  utils.py
Generative_AI_for_Data/Fall_2024/Group_17_Cleverly_arXiv_rag_application/streamlit/: .dockerignore  Dockerfile  app.py  pyproject.toml
Generative_AI_for_Data/Fall_2024/Group_17_Cleverly_arXiv_rag_application/streamlit/ui/: lesson.py  planner.py  plans.py  quiz.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/: README.md  pyproject.toml  rag_load.py  streamlit_app.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/fast_api/: fastapi_setup.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/fast_api/config/: config_settings.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/fast_api/langgraph_api/: agent.py  config.py  langgraph_tools.py  oracle.py  state_schema.py  utilities.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/fast_api/routes/: data_routes.py  download_routes.py  google_codelabs_routes.py  langraph_routes.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/fast_api/services/: data_service.py  google_codelabs.py  pdfhandling.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/features/: chat_with_pdf.py  multi_modal_rag.py
Generative_AI_for_Data/Fall_2024/Group_20_Statistical_Learning_RAG_QA_Bot/navigation/: back.py
Individual_Ming-Tse Chen_Exploratory Data Analysis (EDA) and Visualization/: Individual_Ming-Tse Chen_Exploratory Data Analysis (EDA) and Visualization.ipynb
MD/: AI_Policy_for_Coursework.md  How_to_Speak_Bot_Chapter_12_Ask_for_Input_Pattern.md  How_to_Speak_Bot_Chapter_13_Outline_Expansion_Pattern.md  How_to_Speak_Bot_Chapter_14_Menu_Actions_Pattern.md  How_to_Speak_Bot_Chapter_15_Fact_Check_List_Pattern.md  How_to_Speak_Bot_Chapter_16_Tail_Generation_Pattern.md  How_to_Speak_Bot_Chapter_1_Introduction.md  (+16 more)
Spring_2025_Projects/Fullstack-Multimodal-RAG-System-main/: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
Spring_2025_Projects/Fullstack-Multimodal-RAG-System-main/Data/: Load_pdfs_gcp.py  cfa.txt  multimodal_vectorize_pinecone.py  normalize_existing_urls.py  run_scraper.py  url_scraper.py
Spring_2025_Projects/Fullstack-Multimodal-RAG-System-main/FastAPIs_Services/: Dockerfile  main.py
Spring_2025_Projects/Fullstack-Multimodal-RAG-System-main/Streamlit_App/: Dockerfile  app.py
Spring_2025_Projects/Individual_YifanYuan_MCP_Dataanalyze_with_local_CSV/FinalProject/: LICENSE  README.md  Reference.txt  pyproject.toml
Spring_2025_Projects/Individual_YifanYuan_MCP_Dataanalyze_with_local_CSV/FinalProject/examplecsv/: Time-Wasters on Social Media.csv
Spring_2025_Projects/Individual_YifanYuan_MCP_Dataanalyze_with_local_CSV/FinalProject/mcp-client/: app.py  client.py  pyproject.toml  requirements.txt  serverfront.py  simplepage.py
Spring_2025_Projects/Individual_YifanYuan_MCP_Dataanalyze_with_local_CSV/FinalProject/mcp-server/mcp-server-data-exploration/: README.md  setup.py
Spring_2025_Projects/Individual_YifanYuan_MCP_Dataanalyze_with_local_CSV/FinalProject/mcp-server/mcp-server-data-exploration/src/mcp_server_ds/: __init__.py  server.py
(+902 files in other folders)
