[tool.poetry]
name = "langraph-agentic-systems"
version = "0.1.0"
description = "Building Agentic systems using Langraph"
authors = ["Pragnesh Anekal <72695068+Pragnesh260@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
docling = "^2.4.2"
langchain-text-splitters = "^0.3.2"
langchain-huggingface = "^0.1.2"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.6"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langgraph = "^0.2.45"
langchain-community = "^0.3.5"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"
arxiv = "^2.1.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
streamlit = "^1.40.1"
streamlit-pdf-viewer = "^0.0.19"
boto3 = "^1.35.61"
snowflake-connector-python = "^3.12.3"
pdfkit = "^1.0.0"
markdown = "^3.7"
pypdf2 = "^3.0.1"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
