[build-system]
requires = ["setuptools>=42", "wheel", "mcp"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_server_ds"
version = "0.1.0"
description = "MCP Server for Data Science Tasks"
requires-python = ">=3.7"
dependencies = ["mcp", "pandas", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
