[tool.poetry]
name = "data-ingestion"
version = "0.1.0"
description = ""
authors = ["tanviinchanalkar99 <144856652+tanviinchanalkar99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
