[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Sarthak <sarthaksom10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
streamlit-option-menu = "^0.4.0"
openai = "^1.52.0"
requests = "^2.32.3"
pymssql = "^2.3.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
datasets = "^3.0.1"
plotly = "^5.24.1"
streamlit-plotly-events = "^0.0.6"
google-cloud-storage = "^2.18.2"
mysql-connector-python = "^9.1.0"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.36"
pathlib = "^1.0.1"
pymupdf = "^1.24.12"
pillow = ">=7.1.0,<11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
